# 3DRender

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  camera.cpp  camera.h  collision.cpp  collision.h  main.cpp  raytracer.cpp  raytracer.h  scene.cpp  scene.h
common/: bmp.cpp  bmp.h  color.cpp  color.h  const.h  vector3.cpp  vector3.h
light/: light.h  pointlight.cpp  pointlight.h  rectlight.cpp  rectlight.h
object/: material.cpp  material.h  object.cpp  object.h  plane.cpp  plane.h  sphere.cpp  sphere.h
scenes/: config.json  cornell_box.json  glass.json  scene1.json  scene2.json  scene3.json  scene4.json
scenes/ball_pyramid/: ball_pyramid.json  glass.json
scenes/bowlings/: bowling.json  bowlings.json  cornell_house.json  lamp.json
scenes/desktop_objects/: bowl.json  desktop_objects.json  ellipsoid.json  glass.json  plate.json  vase.json
src/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  raytracer.cpp  raytracer.h  scene.cpp  scene.h
src/common/: CMakeLists.txt  bmp.cpp  bmp.h  color.cpp  color.h  config.cpp  config.h  const.h  photon.cpp  photon.h  ray.cpp  ray.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h
src/curve/: beziercurve3.cpp  beziercurve3.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h  raytracer.cpp
src/engine/photonmapper/: photonmap.cpp  photonmap.h  photonmapper.cpp  photonmapper.h  photontracer.cpp  photontracer.h
src/engine/ppm/: hitpointmap.cpp  hitpointmap.h  ppm.cpp  ppm.h
src/engine/raytracer/: raytracer.cpp  raytracer.h
src/light/: CMakeLists.txt  light.cpp  light.h  pointlight.cpp  pointlight.h  rectlight.cpp  rectlight.h
src/main/: CMakeLists.txt  modeling.cpp  photonmapping.cpp  raytracing.cpp  render.cpp
src/main/scenes_gen/: ball_pyramid.cpp  bowlings.cpp
src/modeling/: main.cpp
src/object/: CMakeLists.txt  collision.cpp  collision.h  cylinder.cpp  cylinder.h  material.cpp  material.h  object.cpp  object.h  plane.cpp  plane.h  rotationbody.cpp  rotationbody.h  sphere.cpp  sphere.h
src/photonmapping/: main.cpp  photonmap.cpp  photonmap.h  photonmapper.cpp  photonmapper.h  photontracer.cpp  photontracer.h
src/raytracing/: main.cpp  raytracer.cpp  raytracer.h
src/scene/: CMakeLists.txt  camera.cpp  camera.h  scene.cpp  scene.h
src/util/: CMakeLists.txt  beziercurve3.cpp  beziercurve3.h  polynomial6.cpp  polynomial6.h
